--- a/manifest.json
+++ b/manifest.json
@@ -34,6 +34,41 @@
         "filters/id-card-filter.js",
         "src/scanner/PatternExtractor.js",
         "src/scanner/ContentExtractor.js",
+        "libs/acorn.min.js",
+        "src/scanner/ast/parser.js",
+        "src/scanner/ast/utils/hash.js",
+        "src/scanner/ast/utils/context.js",
+        "src/scanner/ast/visitors/ASTVisitor.js",
+        "src/scanner/ast/visitors/CredentialVisitor.js",
+        "src/scanner/ast/visitors/APIEndpointVisitor.js",
+        "src/scanner/ast/visitors/SensitiveFunctionVisitor.js",
+        "src/scanner/ast/visitors/ConfigObjectVisitor.js",
+        "src/scanner/ast/visitors/EncodedStringVisitor.js",
+        "src/scanner/ast/ASTExtractor.js",
+        "src/scanner/ast/utils/ResultMerger.js",
+        "src/scanner/ast/ASTBridge.js",
+        "src/scanner/ast/index.js",
+        "src/scanner/vue/utils/serializer.js",
+        "src/scanner/vue/utils/pathUtils.js",
+        "src/scanner/vue/VueFinder.js",
+        "src/scanner/vue/RouterAnalyzer.js",
+        "src/scanner/vue/GuardPatcher.js",
+        "src/scanner/vue/VueDetector.js",
+        "src/scanner/vue/VueDetectorBridge.js",
+        "src/scanner/vue/index.js",
+        "src/scanner/webpack/utils/urlUtils.js",
+        "src/scanner/webpack/utils/patternUtils.js",
+        "src/scanner/webpack/utils/errorHandler.js",
+        "src/scanner/webpack/utils/chunkProcessor.js",
+        "src/scanner/webpack/WebpackDetector.js",
+        "src/scanner/webpack/ChunkAnalyzer.js",
+        "src/scanner/webpack/SourceMapParser.js",
+        "src/scanner/webpack/RuntimeAnalyzer.js",
+        "src/scanner/webpack/ModuleAnalyzer.js",
+        "src/scanner/webpack/SensitiveExtractor.js",
+        "src/scanner/webpack/WebpackScannerBridge.js",
+        "src/scanner/webpack/WebpackResultRenderer.js",
+        "src/scanner/webpack/index.js",
         "content.js"
       ],
       "run_at": "document_end",
@@ -58,7 +93,42 @@
         "src/scanner/deep-scan-window-script.js",
         "deep-scan-fix-patch.js",
         "offscreen.html",
-        "offscreen.js"
+        "offscreen.js",
+        "libs/acorn.min.js",
+        "src/scanner/ast/parser.js",
+        "src/scanner/ast/utils/hash.js",
+        "src/scanner/ast/utils/context.js",
+        "src/scanner/ast/visitors/ASTVisitor.js",
+        "src/scanner/ast/visitors/CredentialVisitor.js",
+        "src/scanner/ast/visitors/APIEndpointVisitor.js",
+        "src/scanner/ast/visitors/SensitiveFunctionVisitor.js",
+        "src/scanner/ast/visitors/ConfigObjectVisitor.js",
+        "src/scanner/ast/visitors/EncodedStringVisitor.js",
+        "src/scanner/ast/ASTExtractor.js",
+        "src/scanner/ast/utils/ResultMerger.js",
+        "src/scanner/ast/ASTBridge.js",
+        "src/scanner/ast/index.js",
+        "src/scanner/vue/utils/serializer.js",
+        "src/scanner/vue/utils/pathUtils.js",
+        "src/scanner/vue/VueFinder.js",
+        "src/scanner/vue/RouterAnalyzer.js",
+        "src/scanner/vue/GuardPatcher.js",
+        "src/scanner/vue/VueDetector.js",
+        "src/scanner/vue/VueDetectorBridge.js",
+        "src/scanner/vue/index.js",
+        "src/scanner/webpack/utils/urlUtils.js",
+        "src/scanner/webpack/utils/patternUtils.js",
+        "src/scanner/webpack/utils/errorHandler.js",
+        "src/scanner/webpack/utils/chunkProcessor.js",
+        "src/scanner/webpack/WebpackDetector.js",
+        "src/scanner/webpack/ChunkAnalyzer.js",
+        "src/scanner/webpack/SourceMapParser.js",
+        "src/scanner/webpack/RuntimeAnalyzer.js",
+        "src/scanner/webpack/ModuleAnalyzer.js",
+        "src/scanner/webpack/SensitiveExtractor.js",
+        "src/scanner/webpack/WebpackScannerBridge.js",
+        "src/scanner/webpack/WebpackResultRenderer.js",
+        "src/scanner/webpack/index.js"
       ],
       "matches": ["<all_urls>"]
     }
